@@ -1,6 +1,11 @@
 Changes in 0.70.5:
   o Client Changes
     * Files changing to config files across distributed repositories now works
+  o Build Changes (cvc)
+    * Locally cooked filesets now include file contents making them
+      installable
+    * Fileset cooks now retrieves all of the file objects in a single
+      network request per repository
 
 Changes in 0.70.4:
   o Client Changes
